src/test/ui/self/elision/lt-ref-self-async.nll.stderr
error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/lt-ref-self-async.rs:12:42
   |
LL |     async fn ref_self(&self, f: &u32) -> &u32 {
   |                                          ^^^^
   |
   = note: hidden type `impl std::future::Future` captures lifetime '_#23r

error: lifetime may not live long enough
  --> $DIR/lt-ref-self-async.rs:13:9
   |
LL |     async fn ref_self(&self, f: &u32) -> &u32 {
   |                       -
   |                       |
   |                       lifetime `'_` defined here
   |                       lifetime `'_` defined here
LL |         f
   |         ^ function was supposed to return data with lifetime `'_` but it is returning data with lifetime `'_`

error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/lt-ref-self-async.rs:18:48
   |
LL |     async fn ref_Self(self: &Self, f: &u32) -> &u32 {
   |                                                ^^^^
   |
   = note: hidden type `impl std::future::Future` captures lifetime '_#23r

error: lifetime may not live long enough
  --> $DIR/lt-ref-self-async.rs:19:9
   |
LL |     async fn ref_Self(self: &Self, f: &u32) -> &u32 {
   |                             -
   |                             |
   |                             lifetime `'_` defined here
   |                             lifetime `'_` defined here
LL |         f
   |         ^ function was supposed to return data with lifetime `'_` but it is returning data with lifetime `'_`

error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/lt-ref-self-async.rs:22:57
   |
LL |     async fn box_ref_Self(self: Box<&Self>, f: &u32) -> &u32 {
   |                                                         ^^^^
   |
   = note: hidden type `impl std::future::Future` captures lifetime '_#23r

error: lifetime may not live long enough
  --> $DIR/lt-ref-self-async.rs:23:9
   |
LL |     async fn box_ref_Self(self: Box<&Self>, f: &u32) -> &u32 {
   |                                     -
   |                                     |
   |                                     lifetime `'_` defined here
   |                                     lifetime `'_` defined here
LL |         f
   |         ^ function was supposed to return data with lifetime `'_` but it is returning data with lifetime `'_`

error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/lt-ref-self-async.rs:26:57
   |
LL |     async fn pin_ref_Self(self: Pin<&Self>, f: &u32) -> &u32 {
   |                                                         ^^^^
   |
   = note: hidden type `impl std::future::Future` captures lifetime '_#23r

error: lifetime may not live long enough
  --> $DIR/lt-ref-self-async.rs:27:9
   |
LL |     async fn pin_ref_Self(self: Pin<&Self>, f: &u32) -> &u32 {
   |                                     -
   |                                     |
   |                                     lifetime `'_` defined here
   |                                     lifetime `'_` defined here
LL |         f
   |         ^ function was supposed to return data with lifetime `'_` but it is returning data with lifetime `'_`

error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/lt-ref-self-async.rs:30:66
   |
LL |     async fn box_box_ref_Self(self: Box<Box<&Self>>, f: &u32) -> &u32 {
   |                                                                  ^^^^
   |
   = note: hidden type `impl std::future::Future` captures lifetime '_#23r

error: lifetime may not live long enough
  --> $DIR/lt-ref-self-async.rs:31:9
   |
LL |     async fn box_box_ref_Self(self: Box<Box<&Self>>, f: &u32) -> &u32 {
   |                                             -
   |                                             |
   |                                             lifetime `'_` defined here
   |                                             lifetime `'_` defined here
LL |         f
   |         ^ function was supposed to return data with lifetime `'_` but it is returning data with lifetime `'_`

error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/lt-ref-self-async.rs:34:62
   |
LL |     async fn box_pin_Self(self: Box<Pin<&Self>>, f: &u32) -> &u32 {
   |                                                              ^^^^
   |
   = note: hidden type `impl std::future::Future` captures lifetime '_#23r

error: lifetime may not live long enough
  --> $DIR/lt-ref-self-async.rs:35:9
   |
LL |     async fn box_pin_Self(self: Box<Pin<&Self>>, f: &u32) -> &u32 {
   |                                         -
   |                                         |
   |                                         lifetime `'_` defined here
   |                                         lifetime `'_` defined here
LL |         f
   |         ^ function was supposed to return data with lifetime `'_` but it is returning data with lifetime `'_`

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0700`.
